# EO-Flood-Ops

./: README.md  eo_flood_ops_model.spec  pyproject.toml  threshold_model.spec
eo_flood_ops/: createFloodMapsFEWS.py  general_utils.py  inundation_model_utils.py  thresholding_model.py
notebooks/: 00_inundation_models_google_raw.ipynb  01_test_single_AOI.ipynb  02_test_multiple_AOI.ipynb  03_test_different_region.ipynb  04_test_leave_extreme_out_validation.ipynb  05_export_trained_models.ipynb  05_test_test.ipynb  06_test_fews_exe.ipynb  07_test_fews_exe.ipynb
pyinstaller_hooks/: proj_lib_hook.py
scripts/: createFloodMapsFEWS.py
src/eo_flood_ops/: general_utils.py  manifold_model.py  model_utils.py  run_model.py  run_threshold_model.py
